[package]
name = "pg_replica_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json"] }
tracing-appender = "0.2.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.147"
pg_walstream = "0.0.1"
